--- a/assets/index.css
+++ b/assets/index.css
@@ -1,123 +1,174 @@
-html {
-    /* Prevent font scaling in landscape while allowing user zoom */ 
-    -webkit-text-size-adjust: 100%;
+/* Reset */
+html, body, div, span, h1, h2, p, blockquote, a, em, img, b, i, ul.nav, ol.nav, li {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ul.nav, ol.nav {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
+
+/* Fonts */
+@font-face {
+  font-family: 'Noto Serif';
+  font-style: normal;
+  font-weight: 400;
+  src: url(/assets/noto-serif-regular.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Noto Serif';
+  font-style: normal;
+  font-weight: 700;
+  src: url(/assets/noto-serif-bold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Noto Serif';
+  font-style: italic;
+  font-weight: 400;
+  src: url(/assets/noto-serif-italic.ttf) format('truetype');
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Inconsolata';
+  font-style: normal;
+  font-weight: 400;
+  src: url(/assets/inconsolata-latin-ext.woff2)
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
 /* latin */
 @font-face {
-    font-family: 'Crimson Text';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Crimson Text Regular'), local('CrimsonText-Regular'), url(/assets/font.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-family: 'Inconsolata';
+  font-style: normal;
+  font-weight: 400;
+  src: url(/assets/inconsolata-latin.woff2)
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+
+
+/* Font selection */
+h1, p, blockquote, li {
+  font-family: 'Noto Serif', serif;
+  font-style: normal;
+  font-weight: 400;
+}
+i, em {
+  font-family: 'Noto Serif', serif;
+  font-style: italic;
+  font-weight: 400;
+}
+h2, h3, b {
+  font-family: 'Noto Serif', serif;
+  font-style: normal;
+  font-weight: 700;
+}
+code.highlighter-rouge  {
+  line-height: 1em;
+  font-size: 0.9em;
+  font-family: 'Inconsolata', monospace;
+}
+
+
+/* Layout */
+html {
+	/* Prevent font scaling in landscape while allowing user zoom */
+	-webkit-text-size-adjust: 100%;
+}
 body {
-    font-family: 'Crimson Text', serif;
-    font-size: larger;
-    background-color: #fff1e5;
-    color: #33302e;
-    margin: 40px 20px;
+	margin: 5em 1.5em;
 }
-
-h1 {
-    margin: 0.5rem 0;
-}
-
-hr {
-    border: none;
-    border-bottom: 1px solid #ccc1b7;
-}
-
-#title-nav-bar {
-    float: left;
-}
-
-#title-profile-photo {
-    float: right;
-}
-@media (max-device-width: 370px) {
-  #title-profile-photo {
-    display: none;
-  }
-}
-
-#profile-photo {
-    height: 95px;
-}
-
-#header, h2, h3, ul, menu, dir {
-    margin: 1rem 0;
-}
-
-#header {
-    padding: 0 0 1rem 0;
-}
-
-#title, #title:hover {
-    color: black;
-    text-decoration: none;
-}
-
-a {
-    color: #005792;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #13334c;
-    text-decoration: underline;
-}
-
-*:focus {
-    outline: 1px solid #ccc1b7;
-    outline-offset: 4px;
-}
-
 @media (min-width: 640px) {
-    #main-container {
-        position: relative;
-        display: block;
-        width: 600px;
-        margin: 0 auto;
-    }
+	#main-container {
+		position: relative;
+		display: block;
+		width: 600px;
+		margin: 0 auto;
+	}
 }
-
-.border-bottom {
-    border-bottom: 1px solid #ccc1b7
+h1 {
+  line-height: 1.5em;
+  font-size: 1.5em;
+	margin-bottom: 1em;
 }
-
-.nav-bar__item {
-    margin-right: 0.5rem;
+h1.date {
+  margin-bottom: 0.5em;
 }
-
-section img {
-    max-width: 100%;
-    width: 450px;
-    margin: 2rem auto;
-    display: block;
+p.date {
+  margin-bottom: 2em;
+  font-style: italic;
 }
-
-.youtube-video {
-    max-width: 100%;
-    width: 450px;
-    height: 250px;
-    margin: 2rem auto;
-    display: block;
+h2 {
+  line-height: 1.5em;
+  font-size: 1.1em;
+  margin-top: 2em;
+  margin-bottom: 0.5em;
 }
-
-.image-label {
-  text-align: center;
+h3 {
+  line-height: 1.5em;
+  font-size: 1em;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
 }
-
+p {
+  line-height: 1.5em;
+  font-size: 1.1em;
+  margin-bottom: 1em;
+}
+blockquote {
+  line-height: 1.5em;
+  font-size: 0.9em;
+  margin-left: 3em;
+  margin-right: 3em;
+  margin-bottom: 1em;
+}
+ul > li, ol > li {
+  line-height: 1.5em;
+}
+ul.nav, ol.nav {
+  margin-bottom: 1em;
+}
+hr {
+	border: none;
+	border-bottom: 1px solid;
+  margin: 2em 0;
+}
+img {
+  max-width: 100%;
+  width: 450px;
+  margin: 2em auto;
+  display: block;
+}
 .no-wrap {
-    white-space: nowrap; 
+  white-space: nowrap;
 }
 
-ul {
-    padding-left: 20px;
+/* Colors */
+body {
+  background-color: #fcfcf7;
 }
-
-.small, code.highlighter-rouge {
-    font-size: 0.9em;
+h1, h2, p, blockquote, li, a {
+  color: #0c0c0c;
 }
